2014-05-29	SilverNexus
	* settings.h: Add field to store minimum log level that writes to file.
	* settings.c: Set default minimum log level to WARNING.
	* parseArgs.c: Add -l and --loglevel flags to valid flags.
	* ErrorLog.c: Add parsing to evaluate log level.
	* main.c, dir_list.c, ErrorLog.h, search.c: Change name of logging function.
	* Makefile: Change optimization to -Ofast.

2014-05-23	SilverNexus
	* settings.h: Add output_file field for custom output file location.
	* settings.c: Set a default value for output_file.
	* parseArgs.c: Add information and parsing for -o and --output flags.
	* main.c: Adjust file handling and output to handle variable output file name.

2014-05-22	SilverNexus
	* settings.h: Add search_string to settings so fewer variables go on the stack during recursion.
	* settings.c: Initialized search string to 0 in init_settings().
	* parseArgs.c: Added parsing for -s and --search flags.
	* main.h: Update function headers for extraction of search string.
	* main.c: Update function calls to reflect addition of search string to settings.

2014-05-22	SilverNexus
	* main.c: Fix bug in which a folder without a trailing "/" as the search directory would crash the program.

2014-05-22	SilverNexus
	* dir_list.c,
	* dir_list.h,
	* settings.h,
	* settings.c: Cleaned up dir_list code by making functions generic to dir_lists.
	* main.c: updated list iterator to match new typedef.
	* Makefile: Added dir_list.o to build process.

2014-05-22	SilverNexus
	* settings.h: Changed root_dir to be a linked list.
	* settings.c: Added function to add to the root_dir linked list.
	* parseArgs.c: Changed parsing of root_dir to utilize linked list.
	* main.c: Added parsing of multiple root directories.

2014-05-21	SilverNexus
	* main.c: Only open output file when needed.

2014-05-21	SilverNexus
	* settings.h,
	* settings.c,
	* main.c,
	* parseArgs.c: Made root directory search argument location controlled by -d flag.

2014-05-21	SilverNexus